[package]
name = "threshold-dkg"
version = "0.1.0"
authors = ["Everstake"]
edition = "2018"

[dependencies]
bytebuffer = {version = "0.2.1"}
simple-error = {version = "0.2.2"}
blake2b = {path = "./blake2b"}
sha2 = {version = "0.8.1"}
hkdf = {version = "0.8.0"}
aes-gcm = {version = "0.5.0"}
aead = {version = "0.2.0"}
schnorrkel = {version = "0.9.1"}
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = {version = "1.2.1"}
rand_core = {version = "0.5", default-features = false}
hex = {version = "0.4"}
num-bigint = {version = "0.3"}
curve25519-dalek = {git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "2.1.0"}

[dependencies.getrandom]
version = "0.1.14"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dkg_and_dss"
harness = false

[features]
default = ["getrandom"]
wasm-bindgen = ["getrandom/wasm-bindgen"]